[package]
name = "dankagu-inf-dj-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
windows = { version = "0.56.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
